sumo/tests/traci/ChangeTLValue/errors/UnknownTL/testclient_out.traci
TraCITestClient output file. Date: Tue Mar 10 14:58:25 2009


-> Command sent: <SimulationStep>:
  TargetTime=48.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=34 objID=xxx
.. Answered with error to command (194), [description: Traffic light 'xxx' is not known]

-> Command sent: <SimulationStep>:
  TargetTime=49.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
